--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,11 +106,11 @@ jobs:
         id: cache-parameters
         run: |
           if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
-            echo "::set-output name=cache-to::"
-            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache"
+            echo "cache-to=" >> $GITHUB_OUTPUT
+            echo "load-cache-from=type=local,src=/tmp/.buildx-cache" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
-            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache-new"
+            echo "cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max" >> $GITHUB_OUTPUT
+            echo "load-cache-from=type=local,src=/tmp/.buildx-cache-new" >> $GITHUB_OUTPUT
           fi
 
       - name: Build backend docker
@@ -204,11 +204,11 @@ jobs:
         id: cache-parameters
         run: |
           if [ "${{ steps.cache-buildx.outputs.cache-hit }}" = "true" ]; then
-            echo "::set-output name=cache-to::"
-            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache"
+            echo "cache-to=" >> $GITHUB_OUTPUT
+            echo "load-cache-from=type=local,src=/tmp/.buildx-cache" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=cache-to::type=local,dest=/tmp/.buildx-cache-new,mode=max"
-            echo "::set-output name=load-cache-from::type=local,src=/tmp/.buildx-cache-new"
+            echo "cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max" >> $GITHUB_OUTPUT
+            echo "load-cache-from=type=local,src=/tmp/.buildx-cache-new" >> $GITHUB_OUTPUT
           fi
 
       - name: Build frontend docker
