--- a/authorizer-app/package.json
+++ b/authorizer-app/package.json
@@ -18,34 +18,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^13.3.11",
-    "@angular/cdk": "^13.3.9",
-    "@angular/common": "^13.3.11",
-    "@angular/compiler": "^13.3.11",
-    "@angular/core": "^13.3.11",
-    "@angular/forms": "^13.3.11",
-    "@angular/material": "^13.3.9",
-    "@angular/material-moment-adapter": "^13.3.9",
-    "@angular/platform-browser": "^13.3.11",
-    "@angular/platform-browser-dynamic": "^13.3.11",
-    "@angular/router": "^13.3.11",
-    "@auth0/angular-jwt": "~5.1.0",
+    "@angular/animations": "^14.2.12",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "^14.2.12",
+    "@angular/compiler": "^14.2.12",
+    "@angular/core": "^14.2.12",
+    "@angular/forms": "^14.2.12",
+    "@angular/material": "^14.2.7",
+    "@angular/material-moment-adapter": "^14.2.7",
+    "@angular/platform-browser": "^14.2.12",
+    "@angular/platform-browser-dynamic": "^14.2.12",
+    "@angular/router": "^14.2.12",
+    "@auth0/angular-jwt": "~5.1.1",
     "@biesbjerg/ngx-translate-extract": "^7.0.4",
     "@larscom/ngx-translate-module-loader": "^3.0.6",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "moment": "^2.29.1",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.4.1",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.9",
-    "@angular/cli": "~13.3.9",
-    "@angular/compiler-cli": "^13.3.11",
-    "@angular/language-service": "^13.3.11",
-    "@types/node": "~16.11.1",
+    "@angular-devkit/build-angular": "14.2.10",
+    "@angular/cli": "^14.2.10",
+    "@angular/compiler-cli": "^14.2.12",
+    "@angular/language-service": "^14.2.12",
+    "@types/node": "~18.11.17",
     "gzipper": "^7.1.0",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.4"
   }
 }
