--- a/gradle.properties
+++ b/gradle.properties
@@ -1,29 +1,6 @@
-#
-#  Copyright 2020 The Hyve
-#
-#  Licensed under the Apache License, Version 2.0 (the "License");
-#  you may not use this file except in compliance with the License.
-#  You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-#  Unless required by applicable law or agreed to in writing, software
-#  distributed under the License is distributed on an "AS IS" BASIS,
-#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#  See the License for the specific language governing permissions and
-#  limitations under the License.
-#
-
 kotlin.code.style=official
-kotlinVersion=1.8.10
-ktlintVersion=0.48.2
 
-okhttpVersion=4.10.0
-radarJerseyVersion=0.10.0
-postgresVersion=42.6.0
-slf4jVersion=2.0.7
-log4j2Version=2.20.0
-jerseyVersion=3.1.1
-junitVersion=5.9.2
-mockitoKotlinVersion=4.1.0
-jedisVersion=4.3.2
+public.gpr.user=radar-public
+public.gpr.token=Z2hwX0h0d0FHSmJzeEpjenBlUVIycVhWb0RpNGdZdHZnZzJTMFVJZA==
+
+kotlinVersion=1.8.21
