--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,15 +6,13 @@ services:
   #---------------------------------------------------------------------------#
   # Management Portal                                                         #
   #---------------------------------------------------------------------------#
-  managementportal-app:
-    image: radarbase/management-portal:0.8.0
+  managementportal:
+    image: radarbase/management-portal:2.0.0
     depends_on:
-      - radarbase-postgresql
-#    ports:
-#      - "8090:8080"
+      - mp-postgresql
     environment:
       SPRING_PROFILES_ACTIVE: prod
-      SPRING_DATASOURCE_URL: jdbc:postgresql://radarbase-postgresql:5432/managementportal
+      SPRING_DATASOURCE_URL: jdbc:postgresql://mp-postgresql:5432/managementportal
       SPRING_DATASOURCE_USERNAME: radarcns
       SPRING_DATASOURCE_PASSWORD: radarcns
       MANAGEMENTPORTAL_FRONTEND_CLIENT_SECRET: "testMe"
@@ -23,21 +21,31 @@ services:
       MANAGEMENTPORTAL_OAUTH_CLIENTS_FILE: /mp-includes/config/oauth_client_details.csv
       MANAGEMENTPORTAL_CATALOGUE_SERVER_ENABLE_AUTO_IMPORT: 'false'
       MANAGEMENTPORTAL_OAUTH_SIGNING_KEY_ALIAS: 'radarbase-managementportal-ec'
+      SERVER_SERVLET_SESSION_COOKIE_SECURE: "false"
       JAVA_OPTS: -Xmx256m  # maximum heap size for the JVM running ManagementPortal, increase this as necessary
     volumes:
       - ./docker/etc/managementportal/:/mp-includes/config
+    labels:
+      - "traefik.http.routers.managementportal.rule=PathPrefix(`/managementportal`)"
+      - "traefik.http.services.managementportal.loadbalancer.server.port=8080"
 
-  radarbase-postgresql:
-    image: radarbase/radarbase-postgres:latest
-#    volumes:
-#      - "./data/:/var/lib/postgresql/data/"
-#    ports:
-#      - "5434:5432"
+  mp-postgresql:
+    image: bitnami/postgresql:15
     environment:
-      - POSTGRES_USER=radarcns
-      - POSTGRES_PASSWORD=radarcns
-      - POSTGRES_MULTIPLE_DATABASES=managementportal,restsourceauthorizer
+      - POSTGRESQL_USERNAME=radarcns
+      - POSTGRESQL_PASSWORD=radarcns
+      - POSTGRESQL_DATABASE=managementportal
+    labels:
+      - "traefik.enable=false"
 
+  rest-auth-postgresql:
+    image: bitnami/postgresql:15
+    environment:
+      - POSTGRESQL_USERNAME=radarcns
+      - POSTGRESQL_PASSWORD=radarcns
+      - POSTGRESQL_DATABASE=restsourceauthorizer
+    labels:
+      - "traefik.enable=false"
 
   radar-rest-sources-backend:
     image: radarbase/radar-rest-source-auth-backend:dev
@@ -45,18 +53,19 @@ services:
       context: .
       dockerfile: authorizer-app-backend/Dockerfile
     depends_on:
-      - radarbase-postgresql
-      - managementportal-app
-#    ports:
-#      - "8085:8085"
+      - rest-auth-postgresql
+      - managementportal
     volumes:
       - ./docker/etc/rest-source-authorizer/authorizer.yml:/etc/authorizer-app-backend/authorizer.yml
     command: ["authorizer-app-backend", "/etc/authorizer-app-backend/authorizer.yml"]
     healthcheck:
-      test: ["CMD", "curl", "--fail-with-body", "http://localhost:8080/health"]
-      interval: 1m30s
+      test: ["CMD", "curl", "--fail-with-body", "http://localhost:8085/rest-sources/backend/health"]
+      interval: 10s
       timeout: 5s
       retries: 3
+    labels:
+      - "traefik.http.routers.backend.rule=PathPrefix(`/rest-sources/backend`)"
+      - "traefik.http.services.backend.loadbalancer.server.port=8085"
 
   radar-rest-sources-authorizer:
     image: radarbase/radar-rest-source-authorizer:dev
@@ -65,10 +74,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - radar-rest-sources-backend
-      - radarbase-postgresql
-      - managementportal-app
-#    ports:
-#      - "8080:80"
+      - managementportal
     environment:
       BASE_HREF: "/rest-sources/authorizer/"
       BACKEND_BASE_URL: "http://localhost:8080/rest-sources/backend"
@@ -79,18 +85,18 @@ services:
       AUTH_CALLBACK_URL: "http://localhost:8080/rest-sources/authorizer/login"
       AUTH_URI: "http://localhost:8080/managementportal/oauth"
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:80"]
-      interval: 1m30s
+      test: ["CMD", "curl", "--fail-with-body", "http://localhost:8080/rest-sources/authorizer"]
+      interval: 10s
       timeout: 5s
       retries: 3
+    labels:
+      - "traefik.http.routers.rest-auth.rule=PathPrefix(`/rest-sources/authorizer`)"
+      - "traefik.http.services.rest-auth.loadbalancer.server.port=8080"
 
-  webserver:
-    image: nginx:1.20-alpine
-    ports:
-      - "8080:8080"
-    depends_on:
-      - radar-rest-sources-backend
-      - managementportal-app
-      - radar-rest-sources-authorizer
+  traefik:
+    image: traefik:2.9
     volumes:
-      - ./docker/etc/webserver/nginx-proxy.conf:/etc/nginx/nginx.conf:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    command: --api.insecure=true --providers.docker
+    ports:
+      - "8080:80"
