--- a/docker/etc/rest-source-authorizer/authorizer.yml
+++ b/docker/etc/rest-source-authorizer/authorizer.yml
@@ -1,12 +1,12 @@
 service:
   # Interval time in minutes for syncing projects and subjects.
   baseUri: http://0.0.0.0:8085/rest-sources/backend/
-  advertisedBaseUri: http://0.0.0.0:8080/rest-sources/backend/
+  advertisedBaseUri: http://localhost:8080/rest-sources/backend/
   enableCors: true
 
 auth:
   # Management Portal URL
-  managementPortalUrl: http://managementportal-app:8080/managementportal/
+  managementPortalUrl: http://managementportal:8080/managementportal
   # OAuth2 Client id of more-promasys-sync application
   clientId: radar_rest_sources_auth_backend
   # OAuth2 Client Secret of more_promasys_sync_client client
@@ -14,7 +14,7 @@ auth:
 
 database:
   driver: org.postgresql.Driver
-  url: jdbc:postgresql://radarbase-postgresql:5432/restsourceauthorizer
+  url: jdbc:postgresql://rest-auth-postgresql:5432/restsourceauthorizer
   user: radarcns
   password: radarcns
   dialect: org.hibernate.dialect.PostgreSQLDialect
