--- a/authorizer-app-backend/Dockerfile
+++ b/authorizer-app-backend/Dockerfile
@@ -10,7 +10,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM --platform=$BUILDPLATFORM gradle:7.6-jdk17 as builder
+FROM --platform=$BUILDPLATFORM gradle:8.3-jdk17 as builder
 
 RUN mkdir /code
 WORKDIR /code
@@ -18,6 +18,7 @@ WORKDIR /code
 ENV GRADLE_USER_HOME=/code/.gradlecache \
     GRADLE_OPTS="-Djdk.lang.Process.launchMechanism=vfork -Dorg.gradle.vfs.watch=false"
 
+COPY ./buildSrc /code/buildSrc
 COPY ./build.gradle.kts ./settings.gradle.kts ./gradle.properties /code/
 COPY authorizer-app-backend/build.gradle.kts  /code/authorizer-app-backend/
 RUN gradle downloadDependencies copyDependencies startScripts
