--- a/docker/etc/rest-source-authorizer/authorizer.yml.template
+++ b/docker/etc/rest-source-authorizer/authorizer.yml.template
@@ -44,6 +44,7 @@ restSourceClients:
   - sourceType: Oura
     authorizationEndpoint: https://cloud.ouraring.com/oauth/authorize
     tokenEndpoint: https://api.ouraring.com/oauth/token
+    deregistrationEndpoint: https://api.ouraring.com/oauth/revoke
     clientId: Oura-clientid
     clientSecret: Oura-clinetsecret
-    scope: daily session heartrate workout tag personal email
+    scope: daily session heartrate workout tag personal email spo2
