--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -14,9 +14,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@3
         with:
-          node-version: 16
+          node-version: 18
           cache: npm
-          cache-dependency-path: '**/package-lock.json'
+          cache-dependency-path: '**/yarn.lock'
 
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/gradle-jdk17@master
