--- a/.github/workflows/scheduled-snyk.yaml
+++ b/.github/workflows/scheduled-snyk.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       
-      - name: Run Snyk to check for vulnerabilities in backend
+      - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/gradle-jdk17@master
         continue-on-error: true # To make sure that SARIF upload gets called
         env:
@@ -31,25 +31,4 @@ jobs:
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
-          category: backend
-          sarif_file: snyk.sarif
-
-      - name: Run Snyk to check for vulnerabilities in frontend
-        uses: snyk/actions/node@master
-        continue-on-error: true # To make sure that SARIF upload gets called
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-          args:  >-
-            --all-projects
-            --fail-on=upgradable
-            --severity-threshold=high
-            --policy-path=.snyk
-            --org=radar-base
-            --sarif-file-output=snyk.sarif
-
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v2
-        with:
-          category: frontend
           sarif_file: snyk.sarif
