--- a/.github/workflows/scheduled-snyk-docker.yaml
+++ b/.github/workflows/scheduled-snyk-docker.yaml
@@ -6,56 +6,68 @@ on:
   workflow_dispatch:
 
 env:
-    DOCKER_IMAGE_BACKEND: radarbase/radar-rest-source-auth-backend
-    DOCKER_IMAGE_FRONTEND: radarbase/radar-rest-source-authorizer
+  REGISTRY: ghcr.io
+  REPOSITORY: ${{ github.repository }}
+  IMAGES: >-
+    [{
+    'name': 'authorizer-app-backend',
+    'build_file': 'authorizer-app-backend/Dockerfile'
+    },{
+    'name': 'authorizer-app',
+    'build_file': 'authorizer-app/Dockerfile'
+    }]
 
 jobs:
-  security:
+
+  prepare-matrix:
+    name: Prepare Matrix Output
     runs-on: ubuntu-latest
+    permissions: {}
+    outputs:
+      images: ${{ steps.step1.outputs.matrix }}
+    steps:
+      - name: Create Matrix Variable
+        id: step1
+        run: echo "matrix=${{ env.IMAGES }}" >> $GITHUB_OUTPUT
+
+  security:
+    needs: prepare-matrix
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+    strategy:
+      matrix:
+        image: ${{ fromJson(needs.prepare-matrix.outputs.images ) }}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
+
+      - name: Lowercase image name
+        run: |
+          echo "DOCKER_IMAGE=${REGISTRY}/${REPOSITORY,,}/${{ matrix.image.name }}" >>${GITHUB_ENV}
 
       - name: Run Snyk to check for vulnerabilities on backend image
+        continue-on-error: true # To make sure that SARIF upload gets called
         uses: snyk/actions/docker@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          image: ${{ env.DOCKER_IMAGE_BACKEND }}
+          image: ${{ env.DOCKER_IMAGE }}
+          # 'exclude-app-vulns' only tests vulnerabilities in the base image.
+          # Code base vulnerabilities are tested the scheduled-snyk.yaml action.
           args: >-
-            --file=authorizer-app-backend/Dockerfile
+            --file=${{ matrix.image.build_file }}
             --fail-on=upgradable
             --severity-threshold=high
             --policy-path=.snyk
             --exclude-app-vulns
             --org=radar-base
-            --sarif-file-output=snyk.sarif
+            --sarif-file-output=${{ matrix.image.name }}.sarif
 
       # Detected vulnerabilities will appear on Github in Security->Code_scanning_alerts tab
-      - name: Upload backend result to GitHub Code Scanning
+      - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v3
         with:
-          category: backend
-          sarif_file: snyk.sarif
-
-      - name: Run Snyk to check for vulnerabilities on frontend image
-        uses: snyk/actions/docker@master
-        env:
-            SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        with:
-            image: ${{ env.DOCKER_IMAGE_FRONTEND }}
-            args: >-
-              --file=authorizer-app/Dockerfile
-              --fail-on=upgradable
-              --severity-threshold=high
-              --policy-path=.snyk
-              --exclude-app-vulns
-              --org=radar-base
-              --sarif-file-output=snyk.sarif
-
-      # Detected vulnerabilities will appear on Github in Security->Code_scanning_alerts tab
-      - name: Upload frontend result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          category: frontend
-          sarif_file: snyk.sarif
+          sarif_file: ${{ matrix.image.name }}.sarif
+          category: ${{ matrix.image.name }}
